# jamesmulator

./: .gitignore  CMakeLists.txt  README.md
data/: jokes.json
src/: bot.hpp  helpers.cpp  main.cpp
src/cmd/: handle.h  ping.h  slashCmds.cpp  slashCmds.h
